--- a/catalog.html
+++ b/catalog.html
@@ -344,30 +344,7 @@
       <button class="modal-close"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
-    <script>
-      var catalog_item = document.querySelectorAll(".catalog-item")
-      var item_info = document.querySelectorAll(".catalog-item-info")
-
-      for (var i = 0; i < catalog_item.length; i++) {
-          catalog_item[i].addEventListener('mouseover', function(evt) {
-                event.preventDefault();
-                item_info.classList.add("js-catalog-item-info-slide-up");
-            });
-        }
-
-      // catalog_item.addEventListener("mouseover", function (evt) {
-      //   evt.preventDefault();
-      //   console.log("Yep");
-      //   item_info.classList.add("js-catalog-item-info-slide-up");
-      // });
-      //
-      // catalog_item.addEventListener("mouseout", function (evt) {
-      //   evt.preventDefault();
-      //   item_info.classList.remove("js-catalog-item-info-slide-up");
-      //   item_info.classList.add("js-catalog-item-info-slide-down")
-      // });
-
-    </script>
+    <script src="js\scrypt.js"></script>
 
   </body>
 </html>
