--- a/index.html
+++ b/index.html
@@ -276,5 +276,7 @@
       <button class="modal-close"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
+    <script src="js\scrypt.js"></script>
+
   </body>
 </html>
