--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
               <li class="filter-option">
                 <label class="filter-option-checkbox">
                   <input class="visually-hidden filter-input filter-input-checkbox"
-                    type="checkbox" name="news" id="filter-news" checked>
+                    type="checkbox" name="news" checked>
                   <span class="checkbox-indicator"></span>
                   <span>Новости</span>
                 </label>
@@ -108,7 +108,7 @@
               <li class="filter-option">
                 <label class="filter-option-checkbox">
                   <input class="visually-hidden filter-input filter-input-checkbox"
-                    type="checkbox" name="gallery" id="filter-gallery">
+                    type="checkbox" name="gallery">
                   <span class="checkbox-indicator"></span>
                   <span>Галерея</span>
                 </label>
@@ -116,7 +116,7 @@
               <li class="filter-option">
                 <label class="filter-option-checkbox">
                   <input class="visually-hidden filter-input filter-input-checkbox"
-                    type="checkbox" name="cart" id="filter-cart">
+                    type="checkbox" name="cart">
                   <span class="checkbox-indicator"></span>
                   <span>Корзина</span>
                 </label>
