--- a/catalog.html
+++ b/catalog.html
@@ -22,10 +22,10 @@
             alt="Логотип сайта Nerds">
           </a>
           <ul class="main-navigation-list">
-            <li class="main-navigation-item"><a href="studio.html">Студия</a></li>
-            <li class="main-navigation-item"><a href="customers.html">Клиенты</a></li>
-            <li class="main-navigation-item"><a href="catalog.html">Магазин</a></li>
-            <li class="main-navigation-item"><a href="contacts.html">Контакты</a></li>
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li class="site-navigation-current"><a>Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
           </ul>
           <ul class="main-navigation-cart">
             <li><a class="cart-link" href="cart.html">Корзина</a></li>
@@ -344,7 +344,8 @@
       <button class="modal-close"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
-    <script src="js\scrypt.js"></script>
+    <script src="js\main_scrypt.js"></script>
+    <script src="js\catalog_scrypt.js"></script>
 
   </body>
 </html>
