--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           alt="Логотип сайта Nerds">
         </a>
         <ul class="main-navigation-list">
-          <li><a href="studio.html">Студия</a></li>
-          <li><a href="customers.html">Клиенты</a></li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
         <ul class="main-navigation-cart">
-          <li><a class="cart-link" href="cart.html">Корзина</a></li>
+          <li><a class="cart-link" href="#">Корзина</a></li>
         </ul>
       </nav>
 
@@ -48,7 +48,7 @@
                 <span>Математически выверенный дизайн для вашего
                   сайта или мобильного приложения.</span>
               </p>
-              <a class="button button-slider" href="more.html">Узнать больше</a>
+              <a class="button button-slider" href="#">Узнать больше</a>
             </div>
           </li>
 
@@ -61,7 +61,7 @@
                 <span>Никакого креатива, только математические формулы
                   для расчёта идеальных пропорций</span>
               </p>
-              <a class="button button-slider" href="more.html">Узнать больше</a>
+              <a class="button button-slider" href="#">Узнать больше</a>
             </div>
           </li>
 
@@ -74,7 +74,7 @@
                 <span>Работать днём, как все? Мы против этого.
                   Ближе к полуночи работа только начинается.</span>
               </p>
-              <a class="button button-slider" href="more.html">Узнать больше</a>
+              <a class="button button-slider" href="#">Узнать больше</a>
             </div>
           </li>
 
@@ -127,7 +127,7 @@
             <div class="advantages-tex-wrapper">
               <h3>Веб-сайты</h3>
               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="button button-order" href="order.html">Заказать</a>
+              <a class="button button-order" href="#">Заказать</a>
           </div>
           </li>
 
@@ -137,7 +137,7 @@
             <div class="advantages-tex-wrapper">
               <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a class="button button-order" href="order.html">Заказать</a>
+              <a class="button button-order" href="#">Заказать</a>
             </div>
           </li>
 
@@ -147,7 +147,7 @@
             <div class="advantages-tex-wrapper">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="button button-order" href="order.html">Заказать</a>
+              <a class="button button-order" href="#">Заказать</a>
             </div>
           </li>
 
@@ -244,7 +244,7 @@
           <h2>NЁRDS DESIGN STUDIO</h2>
           <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br><br>
             тел. +7 (812) 275-75-75</p>
-          <a class="button button-contacts" href="modal_question.html">Напишите нам</a>
+          <a class="button button-contacts" href="#">Напишите нам</a>
         </section>
 
         <div class="footer-bottom">
@@ -303,7 +303,8 @@
       <button class="modal-close"><span class="visually-hidden">Закрыть</span></button>
     </section>
 
-    <script src="js\scrypt.js"></script>
+    <script src="js\main_scrypt.js"></script>
+    <script src="js\index_scrypt.js"></script>
 
   </body>
 </html>
