--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Nerds</title>
-    <link href="css\style.css" rel="stylesheet" >
-    <link href="css\normalize.css" rel="stylesheet" >
+    <link href="css\normalize.css" rel="stylesheet">
+    <link href="css\mini_style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
 
