--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <!--- Промо слайдеры --->
 
       <section class="promo container">
-
         <h2 class="visually-hidden">Наши слоганы</h2>
 
         <ul class="sliders">
@@ -79,6 +78,7 @@
 
         </ul>
 
+        <div class="slider-control-wrapper">
         <form class="slider-control" method="post">
           <ul>
             <li class="slider-control-list">
@@ -104,6 +104,7 @@
             </li>
           </ul>
         </form>
+        </div>
 
       </section>
 
